# sfml-dino

./: CMakeLists.txt  Obstacle.cpp  Obstacle.h  ObstacleGenerator.cpp  ObstacleGenerator.h  Player.cpp  Player.h  README.md  SFMLDino.cpp  main.cpp  obstacle-generator.cpp  obstacle-generator.h  obstacle.cpp  obstacle.h  player.cpp  player.h
